@@ -347,6 +347,8 @@ Branch-2 ( Unreleased changes )
 
     HDFS-3673. libhdfs: fix some compiler warnings. (Colin Patrick McCabe via eli)
 
+    HDFS-3675. libhdfs: follow documented return codes. (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
